profiling-using-exp-runner/backup_FINAL_RESULTS/fibonacci_experiment_1/run_0_repetition_0/energibridge.log
sampling interval: 200, target function: fibonacci, input size: 10
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.fibonacci as module; X = 10; module.fibonacci(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 9.875360229492188 for 0.23118743 sec of execution.
